# coder-desktop-linux

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql.yml  release.yml
app/: CMakeLists.txt
app/assets/terminal/: terminal.html
app/qml/: AgentAppsGrid.qml  AgentChatPage.qml  AgentCreatePage.qml  AgentsPage.qml  AppBrowserPage.qml  AppTile.qml  CategoryFilterBar.qml  CoderButton.qml  CoderTheme.qml  DeploymentPage.qml  DlpPage.qml  FileBrowserPage.qml  FileSyncPage.qml  FileSyncSessionDialog.qml  LaunchDialog.qml  LoginPage.qml  Main.qml  PortForwardDialog.qml  RemoteDirectoryPicker.qml  RunningAppsPanel.qml  SecureDevPage.qml  SettingsPage.qml  SshHelperDialog.qml  StatusChip.qml  TaskDetailPage.qml  TasksPage.qml  TerminalPage.qml  TransferPanel.qml  VpnPage.qml  VsCodeLaunchDialog.qml  WorkspaceDetailPage.qml  WorkspacesPage.qml  main.qml
app/qml/agents/: ActionRequiredForm.qml  AskUserQuestionCard.qml  ChatComposer.qml  ChatDiffPage.qml  ChatStatusCallout.qml  FileChip.qml  MarkdownText.qml  PlanCard.qml  QueuedMessagesList.qml  ReasoningBlock.qml  SkillChip.qml  SourceCitationRow.qml  StreamingIndicator.qml  SubagentInlineCard.qml  ToolCallCard.qml
app/src/: main.cpp
app/src/agents/: AgentNotifier.cpp  AgentNotifier.h  AgentsController.cpp  AgentsController.h  AskUserQuestionParser.cpp  AskUserQuestionParser.h  ChatSession.cpp  ChatSession.h  DiffParser.cpp  DiffParser.h  JsonSchemaParser.cpp  JsonSchemaParser.h  PlanStepParser.cpp  PlanStepParser.h
app/src/api/: AgentApiClient.cpp  AgentApiClient.h  AgentsApiClient.cpp  AgentsApiClient.h  BuildLogWebSocket.cpp  BuildLogWebSocket.h  ChatStreamWebSocket.cpp  ChatStreamWebSocket.h  ChatWatchWebSocket.cpp  ChatWatchWebSocket.h  CoderApiClient.cpp  CoderApiClient.h  PollingController.cpp  PollingController.h  TaskWatchWebSocket.cpp  TaskWatchWebSocket.h  TerminalWebSocket.cpp  TerminalWebSocket.h  WebSocketBase.cpp  WebSocketBase.h
app/src/api/dto/: AgentDirectory.h  BuildInfo.h  Chat.h  ChatMessage.h  ChatModels.h  ChatStreamEvent.h  Task.h  Template.h  User.h  Workspace.h
app/src/apps/: AppDiscovery.cpp  AppDiscovery.h  AppEntry.h  AppLaunchProfile.cpp  AppLaunchProfile.h  AppModel.cpp  AppModel.h  IconThemeProvider.cpp  IconThemeProvider.h  RunningAppModel.cpp  RunningAppModel.h
app/src/auth/: LoginFlowController.cpp  LoginFlowController.h
app/src/data/: Deployment.h  SecureStorage.cpp  SecureStorage.h  SessionManager.cpp  SessionManager.h
app/src/dlp/: DlpCompositorManager.cpp  DlpCompositorManager.h  DlpCompositorWidget.cpp  DlpCompositorWidget.h
app/src/filesync/: FileSyncManager.cpp  FileSyncManager.h  FileSyncSession.cpp  FileSyncSession.h  FileTransferManager.cpp  FileTransferManager.h  MutagenDaemon.cpp  MutagenDaemon.h
app/src/models/: ChatListModel.cpp  ChatListModel.h  ChatMessagesModel.cpp  ChatMessagesModel.h  PeerModel.cpp  PeerModel.h  TaskModel.cpp  TaskModel.h  WorkspaceModel.cpp  WorkspaceModel.h
app/src/notifications/: NotificationManager.cpp  NotificationManager.h
app/src/settings/: MdmConfigManager.cpp  MdmConfigManager.h  SettingsManager.cpp  SettingsManager.h
app/src/terminal/: TerminalBridge.cpp  TerminalBridge.h
app/src/tray/: SystemTrayIcon.cpp  SystemTrayIcon.h
app/src/updater/: AutoUpdater.cpp  AutoUpdater.h
app/src/util/: UniqueFd.h
app/src/vpn/: DnsManager.cpp  DnsManager.h  TunManager.cpp  TunManager.h  VpnBridge.cpp  VpnBridge.h
app/src/webview/: AppBrowserWidget.cpp  AppBrowserWidget.h
app/tests/qml/: ChatLayoutHarness.qml
app/tests/unit/: tst_agentdtos.cpp  tst_agentparsers.cpp  tst_apiclient.cpp  tst_applaunchprofile.cpp  tst_chatlayout.cpp  tst_chatmodels.cpp  tst_chatsession.cpp  tst_dnsmanager.cpp  tst_filesync.cpp  tst_models.cpp  tst_runningappmodel.cpp  tst_settings.cpp
cmake/: BuildWlroots.cmake  FetchMutagen.cmake  FindDependencies.cmake
coder-dlp-compositor/: CMakeLists.txt
coder-dlp-compositor/include/: coder_dlp.h
coder-dlp-compositor/src/: clipboard.c  compositor.c  compositor_internal.h  dlp_policy.c  input.c  output.c  sandbox_launcher.c  security_context.c  shell.c  watermark.c  watermark.h  xwayland.c
coder-dlp-compositor/tests/: test_policy.c
coder-vpn-linux/: .gitignore  README.md  bridge.go  dns_linux.go  go.mod  go.sum
coder-vpn-linux/cmd/coder-desktop-helper/: main.go
coder-vpn-linux/internal/dbusservice/: polkit.go  service.go
coder-vpn-linux/internal/dns/: dns_linux.go
coder-vpn-linux/internal/sdutil/: sdutil.go
coder-vpn-linux/scripts/: build-so.sh
dbus/: com.coder.Desktop.Helper.conf  com.coder.Desktop.Helper.service.in  com.coder.Desktop.Helper1.xml
docs/: architecture.md  file-sync.md  planned_implementation.md
packaging/: README.md  release.sh
packaging/apk/: APKBUILD  build-apk.sh
packaging/appimage/: build-appimage.sh
packaging/deb/debian/: changelog  coder-desktop.install  control  copyright  rules
packaging/flatpak/: com.coder.CoderDesktop.yml
packaging/polkit/: com.coder.Desktop.Helper.policy
packaging/resources/: com.coder.CoderDesktop.desktop
packaging/rpm/: coder-desktop.spec
packaging/scripts/: postinst  postrm
packaging/systemd/: coder-desktop-helper.service.in
scripts/: install-hooks.sh  pre-commit
snap/: snapcraft.yaml
